<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>cz.lbenda.dataman</groupId>
  <artifactId>dataman-parent</artifactId>
  <version>2.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>dataman-parent</name>

  <url>https://github.com/lbenda/Dataman/wiki</url>
  <scm>
    <connection>scm:git:https://github.com/lbenda/Dataman.git</connection>
    <developerConnection>scm:git:https://github.com/lbenda/Dataman.git</developerConnection>
    <url>https://github.com/lbenda/Dataman.git</url>
  </scm>

  <developers>
    <developer>
      <id>benzin</id>
      <name>Lukáš Benda</name>
      <email>lbenda@lbenda.cz</email>
      <organization>Lukáš Benda</organization>
      <organizationUrl>http://www.lbenda.cz</organizationUrl>
    </developer>
  </developers>

  <repositories>
    <repository>
      <id>sonatype</id>
      <name>sonatypenetbeans</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </repository>
  </repositories>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>nbm-maven-plugin</artifactId>
          <version>3.13</version>
          <extensions>true</extensions>
          <configuration>
            <brandingToken>${brandingToken}</brandingToken>
            <cluster>${brandingToken}</cluster>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.1</version>
          <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <modules>
    <module>xsd</module>
    <module>rcp</module>
    <module>dataman</module>
  </modules>

  <properties>
    <netbeans.version>RELEASE80</netbeans.version>
    <brandingToken>dataman</brandingToken>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>cz.lbenda.dataman</groupId>
        <artifactId>xsd</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>cz.lbenda.dataman</groupId>
        <artifactId>rcp</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.7</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.1.2</version>
      </dependency>
      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-core</artifactId>
        <version>1.1.2</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.4</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.4</version>
      </dependency>
      <dependency>
        <groupId>org.fxmisc.richtext</groupId>
        <artifactId>richtextfx</artifactId>
        <version>1.0.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>org.controlsfx</groupId>
        <artifactId>controlsfx</artifactId>
        <version>8.40.9</version>
      </dependency>
      <dependency>
        <groupId>org.drombler.fx</groupId>
        <artifactId>drombler-fx-core-docking</artifactId>
        <version>0.6</version>
      </dependency>
      <dependency>
        <groupId>org.jfxtras</groupId>
        <artifactId>jfxtras-controls</artifactId>
        <version>8.0-r4</version>
      </dependency>

      <dependency>
        <groupId>org.hsqldb</groupId>
        <artifactId>hsqldb</artifactId>
        <version>2.3.3</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>1.4.181</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.derby</groupId>
        <artifactId>derby</artifactId>
        <version>10.11.1.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.xerial</groupId>
        <artifactId>sqlite-jdbc</artifactId>
        <version>3.8.11.1</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>cz.lbenda.dataman</groupId>
        <artifactId>rcp</artifactId>
        <version>${project.version}</version>
        <type>test-jar</type>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>3.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.testng</groupId>
      <artifactId>testng</artifactId>
      <version>6.9.6</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-all</artifactId>
      <version>2.0.2-beta</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
